policies/tests/disallow-default-namespace/resource-pass.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-pass
  namespace: team-alpha
  labels:
    app.kubernetes.io/name: test-app
    app.kubernetes.io/instance: test
    sre.io/team: alpha
spec:
  containers:
    - name: app
      image: harbor.sre.internal/alpha/app:v1.0.0
      resources:
        limits:
          cpu: 500m
          memory: 512Mi
        requests:
          cpu: 100m
          memory: 128Mi
      securityContext:
        runAsNonRoot: true
        allowPrivilegeEscalation: false
        capabilities:
          drop: ["ALL"]
