policies/tests/disallow-default-namespace/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-default-namespace-test
policies:
  - policy.yaml
resources:
  - resource-pass.yaml
  - resource-fail.yaml
results:
  - policy: disallow-default-namespace
    rule: disallow-default-namespace
    resource: test-pod-pass
    kind: Pod
    result: pass
  - policy: disallow-default-namespace
    rule: disallow-default-namespace
    resource: test-pod-fail
    kind: Pod
    result: fail
